<resources>
    <string name="app_name">Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nome</string>
    <string name="last_name">Último nome</string>
    <string name="age">Idade</string>
    <string name="update">Atualizar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="delete">Excluir</string>
    <string name="email">Email</string>
</resources>