<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.UpdateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="48dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
            app:title="Atualizar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@id/etName"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/age"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/delete"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/btnUpdate"/>

</androidx.constraintlayout.widget.ConstraintLayout>